# gif-recorder

./: CMakeLists.txt  README.md
.github/workflows/: codeql-analysis.yml  codeql.yml
src/: CMakeLists.txt  event_monitor.cpp  event_monitor.hpp  gif-recorder.rc  main.cpp  mainwindow.cpp  mainwindow.hpp  resources.qrc  settings.cpp  settings.hpp  settings.ui
